MZ-201 add my-avatars page to user section

--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -17,6 +17,13 @@
             color: white !important;
             margin-right: 5px !important;
         }
+        .text-wight {
+            margin-top: 5px;
+        }
+        .text-wight a {
+            color: #fff;
+            text-decoration: underline;
+        }
     </style>
 }
 <div id="dashboard-header">
@@ -26,6 +33,9 @@
                 <div class="col-sm-3">
                     <div id="dashboard-avatar">
                         <img class="img-responsive" src="@Model.User.AvatarUrl" alt="@Model.User.UserName" />
+                        <div class="text-center text-wight">
+                            <a href="@Url.Action("MyAvatars", "User")">@Global.MyAvatars</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-9">
