MZ-199 Friends - Notes & Fixes

--- a/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
@@ -1,10 +1,22 @@
 ﻿@using Mzayad.Web.Extensions
+<style>
+    .badge-notify {
+        background: red;
+        position: relative;
+        top: -8px;
+        left: 0px;
+    }
+</style>
+@{
+    var count = Html.Action("RequestsCount", "friends");
+}
+
 @if (Request.IsAuthenticated)
 {
-    var routeValues = new {area = "", language = Html.Language()};
+    var routeValues = new { area = "", language = Html.Language() };
 
     <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@string.Format(Global.HelloFirstName, User.Identity.GetDisplayName())<i class="fa fa-caret-down fa-pad-left"></i></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@string.Format(Global.HelloFirstName, User.Identity.GetDisplayName())<i class="fa fa-caret-down fa-pad-left"></i><span class="badge badge-notify">@count</span></a>
         <ul class="dropdown-menu">
             <li><a href="@Url.Action("Dashboard","User", routeValues)"><i class="fa fa-fw fa-pad-right fa-tachometer"></i>@Global.Dashboard</a></li>
             <li><a href="@Url.Action("EditAccount","User", routeValues)"><i class="fa fa-fw fa-pad-right fa-user"></i>@Global.EditAccount</a></li>
@@ -14,6 +26,7 @@
             <li><a href="@Url.Action("Notifications", "User", routeValues)"><i class="fa fa-fw fa-pad-right fa-bullhorn"></i>@Global.Notifications</a></li>
             <li><a href="@Url.Action("Trophies", "User", routeValues)"><i class="fa fa-fw fa-pad-right fa-trophy"></i>@Global.Trophies</a></li>
             <li><a href="@Url.Action("Index","WishList", routeValues)"><i class="fa fa-fw fa-pad-right fa-star"></i>@Global.MyWishList</a></li>
+            <li><a href="@Url.Action("Requests","Friends", routeValues)"><i class="fa fa-fw fa-pad-right fa-users"></i>@Global.FriendRequests<span class="badge badge-notify">@count</span></a></li>
             <li>
                 <a href="javascript:document.getElementById('signout').submit();"><i class="fa fa-fw fa-pad-right fa-sign-out"></i>@Global.SignOut</a>
                 @using (Html.BeginForm("SignOut", "Account", new { area = "", language = Html.Language() }, FormMethod.Post, new { id = "signout" }))
