--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -69,8 +69,8 @@
                 </div>
                 <div class="col-sm-3">
                     <a href="@Url.Action("Friends", "User")" class="dashboard-cell">
-                        <div class="dashboard-number">@Model.FriendRequests.Count</div>
-                        <div class="dashboard-label text-uppercase">@Global.FriendRequest</div>
+                        <div class="dashboard-number">@Model.Friends.Count</div>
+                        <div class="dashboard-label text-uppercase">@(Model.Friends.Count == 1 ? Global.Friend : Global.Friends)</div>
                     </a>
                 </div>
             </div>
@@ -131,7 +131,8 @@
     <div class="panel dashboard-panel">
         <div class="panel-heading">
             <h3 class="panel-title text-uppercase">@Global.MyWishList</h3>
-            <div class="pull-right"><a class="text-uppercase" href="@Url.Action("Index", "WishList")">@Global.ViewAll</a>
+            <div class="pull-right">
+                <a class="text-uppercase" href="@Url.Action("Index", "WishList")">@Global.ViewAll</a>
             </div>
             <div class="pull-right"><a class="text-uppercase panel-link" href="@Url.Action("Add", "WishList")">@Global.AddNewItem</a></div>
             <div class="clearfix"></div>
