--- a/src/Mzayad.Web/Views/User/UserProfile.cshtml
+++ b/src/Mzayad.Web/Views/User/UserProfile.cshtml
@@ -2,7 +2,7 @@
 @using Humanizer
 @using Mzayad.Core.Formatting
 @using DateTimeFormatter = Mzayad.Core.Formatting.DateTimeFormatter
-@model Mzayad.Web.Models.User.DashboardViewModel
+@model Mzayad.Web.Models.User.UserProfileViewModel
 
 @{
     ViewBag.Title = Model.User.UserName;
@@ -18,24 +18,30 @@
                 dataType: 'json',
                 success: function (e) {
                     if (e == '1') {
-                        $('#dvMessage').html('@Html.Raw(Html.StatusMessage("your request has been sent successfully",StatusMessageType.Success).ToString().Replace("'","\""))');
+                        $('#dvMessage').html('@Html.Raw(Html.StatusMessage(Global.FriendRequestSuccessMessage,StatusMessageType.Success).ToString().Replace("'","\""))');
                     }
                     else {
-                        $('#dvMessage').html('@Html.Raw(Html.StatusMessage("Error: try later!", StatusMessageType.Error).ToString().Replace("'","\""))');
+                        $('#dvMessage').html('@Html.Raw(Html.StatusMessage(Global.FriendRequestFailMessage, StatusMessageType.Error).ToString().Replace("'","\""))');
                     }
                 },
                 error: function () {
-                    $('#dvMessage').html('@Html.Raw(Html.StatusMessage("Error: try later!", StatusMessageType.Error).ToString().Replace("'","\""))');
+                    $('#dvMessage').html('@Html.Raw(Html.StatusMessage(Global.FriendRequestFailMessage, StatusMessageType.Error).ToString().Replace("'","\""))');
                 }
             });
         }
     </script>
 }
 <div id="dvMessage">
-    @if (Model.User.ProfileStatus == Mzayad.Models.Enum.UserProfileStatus.Private && !Model.AreFriends)
+    @if (Model.User.ProfileStatus == Mzayad.Models.Enum.UserProfileStatus.Private)
     {
-        @(Html.StatusMessage("This Profile is private!. " + (Model.User.UserName != User.Identity.Name ? "Click <span style='cursor:pointer;color:red' onclick='friendRequest()'>here</span> to send friend request" : string.Empty), StatusMessageType.Warning))
-        return;
+        if (!Model.AreFriends && !Model.SentFriendRequestBefore)
+        {
+            @(Html.StatusMessage(Global.PrivateProfileMessage + " " + Global.Click + " <span style='cursor:pointer;color:green' onclick='friendRequest()'> " + Global.Here + "</span> " + Global.ToSendFriendRequestMessage, StatusMessageType.Warning))
+        }
+        if (Model.SentFriendRequestBefore)
+        {
+            @(Html.StatusMessage(Global.FriendRequestSent, StatusMessageType.Information))
+        }
     }
 </div>
 
@@ -77,7 +83,6 @@
                             </div>
                             <small>@(Model.User.Xp)/@(Model.NextLevel.XpRequired)</small>
                         </div>
-                        <div id="dashboard-level"><span class="btn btn-link" style='color:#33ace0;padding:5px 5px 5px 0px' onclick='friendRequest()'>@Global.FriendRequest</span></div>
                     </div>
                 </div>
             </div>
@@ -91,21 +96,29 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <a href="@Url.Action("Index", "Subscriptions")" class="dashboard-cell">
-                        <div class="dashboard-number">@Model.User.Tokens</div>
-                        <div class="dashboard-label text-uppercase">@Global.Tokens</div>
-                    </a>
+                    <div class="dashboard-cell">
+                        <div class="dashboard-number">@Model.Friends.Count</div>
+                        <div class="dashboard-label text-uppercase">@(Model.Friends.Count == 1 ? Global.Friend : Global.Friends)</div>
+                    </div>
                 </div>
                 <div class="col-sm-4">
-                    <a href="@Url.Action("Trophies", "User")" class="dashboard-cell">
+                    <div class="dashboard-cell">
                         <div class="dashboard-number">@Model.Trophies.Count</div>
                         <div class="dashboard-label text-uppercase">@Global.Trophies</div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+@if (!Model.AreFriends && !Model.SentFriendRequestBefore)
+{
+    <div id="dashboard-level"><span class="btn btn-link" style='color:green;padding:5px 5px 5px 0px' onclick='friendRequest()'>@Global.SendFriendRequest</span></div>
+}
+@if (Model.SentFriendRequestBefore)
+{
+    <div id="dashboard-level"><span style='color:green;padding:5px 5px 5px 0px'>@Global.FriendRequestSent</span></div>
+}
 
 @if (Model.Trophies.Any())
 {
@@ -116,7 +129,7 @@
         </div>
         <div class="panel-body">
             <ul class="dashboard-flex-list">
-                @foreach (var trophy in Model.Trophies.Take(10))
+                @foreach (var trophy in Model.Trophies)
                 {
                     <li>
                         <div class="dashboard-flex-item">
@@ -129,22 +142,25 @@
         </div>
     </div>
 }
-
-@if (Model.Auctions.Any())
+@if (Model.Friends.Any())
 {
     <div class="panel dashboard-panel">
         <div class="panel-heading">
-            <h3 class="panel-title text-uppercase">@Global.ItemsWon</h3>
+            <h3 class="panel-title text-uppercase">@Global.Friends</h3>
             <div class="clearfix"></div>
         </div>
         <div class="panel-body">
             <ul class="dashboard-flex-list">
-                @foreach (var auction in Model.Auctions.Take(10))
+                @foreach (var friend in Model.Friends)
                 {
                     <li>
                         <div class="dashboard-flex-item">
-                            <img class="img-responsive" src="@auction.Product.MainImage().ImageSmUrl" alt="@auction.Title" />
-                            <div class="dashboard-flex-name text-uppercase">@auction.Title</div>
+                            <img class="img-responsive" src="@friend.AvatarUrl" alt="@friend.UserName" />
+                            <div class="dashboard-flex-name text-uppercase">
+                                <a href="@Url.Content("~/"+ LanguageCode+ "/profiles/"+friend.UserName)">
+                                    @friend.UserName
+                                </a>
+                            </div>
                         </div>
                     </li>
                 }
@@ -153,65 +169,88 @@
     </div>
 }
 
-@if (Model.WishLists.Any())
-{
-    <div class="panel dashboard-panel">
-        <div class="panel-heading">
-            <h3 class="panel-title text-uppercase">@Global.MyWishList</h3>
-            <div class="clearfix"></div>
-        </div>
-        <div class="panel-body">
-            <table class="@Html.Css().GridTable">
-                <thead>
-                    <tr>
-                        <th>@Global.ItemName</th>
-                        <th>@Global.Added</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model.WishLists)
-                    {
-                        <tr>
-                            <td>@item.NameEntered</td>
-                            <td>@DateTimeFormatter.ToLocalTime(item.CreatedUtc)</td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
-}
+    @*@if (Model.Auctions.Any())
+        {
+            <div class="panel dashboard-panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-uppercase">@Global.ItemsWon</h3>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="panel-body">
+                    <ul class="dashboard-flex-list">
+                        @foreach (var auction in Model.Auctions.Take(10))
+                        {
+                            <li>
+                                <div class="dashboard-flex-item">
+                                    <img class="img-responsive" src="@auction.Product.MainImage().ImageSmUrl" alt="@auction.Title" />
+                                    <div class="dashboard-flex-name text-uppercase">@auction.Title</div>
+                                </div>
+                            </li>
+                        }
+                    </ul>
+                </div>
+            </div>
+        }*@
 
-@if (Model.Bids.Any())
-{
-    <div class="panel dashboard-panel">
-        <div class="panel-heading">
-            <h3 class="panel-title text-uppercase">@Global.BidHistory</h3>
-            <div class="clearfix"></div>
-        </div>
-        <div class="panel-body">
-            <table class="@Html.Css().GridTable">
-                <thead>
-                    <tr>
-                        <th>@Global.DateSlashTime</th>
-                        <th>@Global.Auction</th>
-                        <th>@Global.Amount</th>
-                        <th>@Global.TimeLeft</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model.Bids)
-                    {
-                        <tr>
-                            <td>@DateTimeFormatter.ToLocalTime(item.CreatedUtc, DateTimeFormatter.Format.Full)</td>
-                            <td>@item.Auction.Title</td>
-                            <td>@CurrencyFormatter.Format(item.Amount)</td>
-                            <td>@TimeSpan.FromSeconds(item.SecondsLeft).Humanize(4)</td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
-}
+    @*@if (Model.WishLists.Any())
+        {
+            <div class="panel dashboard-panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-uppercase">@Global.MyWishList</h3>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="panel-body">
+                    <table class="@Html.Css().GridTable">
+                        <thead>
+                            <tr>
+                                <th>@Global.ItemName</th>
+                                <th>@Global.Added</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.WishLists)
+                            {
+                                <tr>
+                                    <td>@item.NameEntered</td>
+                                    <td>@DateTimeFormatter.ToLocalTime(item.CreatedUtc)</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        }*@
+
+    @*@if (Model.Bids.Any())
+        {
+            <div class="panel dashboard-panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-uppercase">@Global.BidHistory</h3>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="panel-body">
+                    <table class="@Html.Css().GridTable">
+                        <thead>
+                            <tr>
+                                <th>@Global.DateSlashTime</th>
+                                <th>@Global.Auction</th>
+                                <th>@Global.Amount</th>
+                                <th>@Global.TimeLeft</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Bids)
+                            {
+                                <tr>
+                                    <td>@DateTimeFormatter.ToLocalTime(item.CreatedUtc, DateTimeFormatter.Format.Full)</td>
+                                    <td>@item.Auction.Title</td>
+                                    <td>@CurrencyFormatter.Format(item.Amount)</td>
+                                    <td>@TimeSpan.FromSeconds(item.SecondsLeft).Humanize(4)</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        }*@
 
