MZ-192 change alertify header text

--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/_AddEditAuction.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/_AddEditAuction.cshtml
@@ -143,7 +143,7 @@
                 </div>
             </section>
             <section>
-                @Html.LabelFor(i => i.Auction.CountryList)
+                <label>Country List</label>
                 <div class="row">
                     @foreach (SelectListItem country in Model.GccCountryList)
                     {
