MZ-192 update toke label

--- a/src/Mzayad.Web/Areas/admin/Views/Avatars/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Avatars/Edit.cshtml
@@ -31,7 +31,7 @@
                 <div class="form-group">
                     <div class="input-group">
                         @Html.TextBoxFor(i => i.Avatar.Token, new { @type = "number", @class = "form-control token-validation" })
-                        <div class="input-group-addon">Token</div>
+                        <div class="input-group-addon">tokens</div>
                     </div>
                     @Html.ValidationMessageFor(i => i.Avatar.Token)
                 </div>
