--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
@@ -4,7 +4,8 @@
 @model Mzayad.Web.Models.Auctions.AuctionViewModel
 
 @helper RenderCountry(string countries){
-var countriesArray = Model.CountryList.Split(',');
+var countriesArray = new string[0];
+//var countriesArray = Model.CountryList.Split(',');
 var resultHtml = "";
 foreach (var country in countriesArray)
 {
