MZ-201 remove my avatar link

--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -33,9 +33,9 @@
                 <div class="col-sm-3">
                     <div id="dashboard-avatar">
                         <img class="img-responsive" src="@Model.User.AvatarUrl" alt="@Model.User.UserName" />
-                        <div class="text-center text-wight">
+                        @*<div class="text-center text-wight">
                             <a href="@Url.Action("MyAvatars", "User")">@Global.MyAvatars</a>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
                 <div class="col-sm-9">
